# NetForensicToolkit

./: README.md  capture.pcap  install.sh  install_dependencies.sh  iocs.txt  netforensic.py  protocols.csv  pyproject.toml  quick_start.sh  requirements.txt  setup.py  top_dst.csv  top_src.csv
netforensic/: __init__.py  animations.py  capture.py  cli.py  parser.py  report.py  utils.py
tests/: test_capture.py  test_parser.py
