[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netforensic-toolkit"
dynamic = ["version"]
dependencies = [
    "scapy>=2.4.5",
    "dpkt>=1.9.8",
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
]

[project.scripts]
netforensic = "netforensic.cli:main"

[tool.black]
line-length = 88
target-version = ['py310']