[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netforensic-toolkit"
version = "1.0.0"
description = "Professional network forensic analysis toolkit with cartoonish interface"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
authors = [
    {name = "Syed Rai", email = "your-email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "scapy>=2.4.5",
    "dpkt>=1.9.8",
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
    "colorama>=0.4.6",
]

[project.scripts]
netforensic = "netforensic.cli:main"
